--- a/index.html
+++ b/index.html
@@ -241,7 +241,9 @@
          <div class="twelve columns collapsed">
 
             <h1>Check Out Some of My Projects.</h1>
-            <h1>(Personal projects are underway and I am eager to begin working on company group projects!)</h1>
+
+            <h1>(Personal projects are underway and I am eager to begin working on company group projects!) </h1>
+               <h1>In the meantime, visit my Github for other published works.</h1>
 
             <div id="portfolio-wrapper" class="bgrid-quarters s-bgrid-thirds cf">
 
